--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -33,6 +33,8 @@
   align-items: center;
   padding: 0 10px 0 10px;
   grid-template-columns: 3% auto 15%;
+
+  transition: all 0.1s;
 }
 
 .searchBar input {
@@ -53,6 +55,10 @@
   outline: none;
 }
 
+.searchBar:hover {
+  outline: 3px solid #2e324944;
+}
+
 .preferences {
   display: flex;
   width: 100%;
@@ -69,6 +75,18 @@
   align-items: center;
 }
 
+.headerButton {
+  transition: all 0.2s;
+}
+
+.headerButton:hover {
+  color: #6a7097 !important;
+}
+
+.headerButton:active {
+  color: #2e3249 !important;
+}
+
 .userDropdown {
   display: flex;
   width: 9rem;
@@ -80,6 +98,12 @@
   color: white;
   font-weight: bold;
   padding: 0 5px 0 15px;
+
+  transition: all 0.2s;
+}
+
+.userDropdown:hover {
+  filter: brightness(0.7);
 }
 
 /* Content Area - Includes Sidebars */
