--- a/src/Styles/Global.module.css
+++ b/src/Styles/Global.module.css
@@ -50,3 +50,10 @@
 .icon:active {
   filter: brightness(0.6);
 }
+
+.dividerHorizontal {
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  margin: 10px 0;
+}
