--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -14,7 +14,7 @@
   display: grid;
   grid-template-columns: 10% 40% 30% 20%;
   align-content: center;
-  z-index: 100;
+  z-index: 2000;
 }
 
 .logo {
@@ -57,18 +57,14 @@
   outline: none;
 }
 
-.searchBar:hover {
-  outline: 3px solid #2e324944;
-}
-
 .preferences {
-  display: flex;
+  display: grid;
   width: 100%;
   height: 60px;
   align-self: center;
+  justify-items: center;
   align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  grid-template-columns: repeat(2, 50%);
 }
 
 .preferences > div:first-child {
@@ -100,12 +96,38 @@
   color: white;
   font-weight: bold;
   padding: 0 5px 0 15px;
-
+  cursor: pointer;
+  user-select: none;
   transition: all 0.2s;
 }
 
 .userDropdown:hover {
   filter: brightness(0.7);
+}
+
+.userDropdown:active {
+  filter: brightness(0.5);
+}
+
+.dropdownPanel {
+  position: absolute;
+  right: 0;
+  top: 60px;
+  background-color: #424769;
+  width: 12%;
+  height: 150px;
+  z-index: 1000;
+  border-bottom-left-radius: 10px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
+  border: 1px solid #2d3250;
+  border-top: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 0;
+  gap: 5px;
+  transition: all 0.2s;
+  overflow: hidden;
 }
 
 /* Content Area - Includes Sidebars */
