--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
   background-color: #424769;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.05);
 }
