--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -174,6 +174,22 @@
   border-right: 1px solid #424769;
 }
 
+.indexItemGroupInput {
+  display: flex;
+  color: #7077a1;
+  background-color: transparent;
+  border: none;
+  flex-direction: column;
+  gap: 10px;
+  font-weight: 600;
+  font-size: 16px;
+  margin: 0 10px 10px -1.5rem;
+  padding-right: 10px;
+  outline: none;
+  border-bottom: 2px solid #424769;
+  text-align: center;
+}
+
 .sidebarSection {
   width: 15%;
   background-color: #2d3250;
