--- a/src/Styles/Global.module.css
+++ b/src/Styles/Global.module.css
@@ -57,3 +57,65 @@
   background-color: #ccc;
   margin: 10px 0;
 }
+
+.popup {
+  position: fixed;
+  top: 150px;
+  left: calc(50vw - 150px);
+  width: 300px;
+  height: 200px;
+  background-color: #424769;
+  border: 2px solid #6a7097;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3000;
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+}
+
+.popupBackground {
+  position: fixed;
+  top: 0;
+  left: "0";
+  width: "100vw";
+  height: "100vh";
+  background-color: "rgba(0;0;0;0.3)";
+  z-index: 2500;
+}
+
+.deletePopup {
+  display: "flex";
+  flex-direction: "column";
+  align-items: "center";
+  justify-content: "center";
+  height: "100%";
+  text-align: "center";
+  padding: "0 10px";
+}
+
+.deletePopup p {
+  color: "#b7bbd0";
+  font-size: "1rem";
+  font-weight: "bold";
+  margin-bottom: "2rem";
+}
+
+.deletePopupNoButton {
+  background-color: "#e75c40";
+  color: "white";
+  padding: "0.5rem 1rem";
+  border-radius: "5px";
+  border: "none";
+  font-weight: "bold";
+}
+
+.deletePopupYesButton {
+  background-color: "#7077a1";
+  color: "white";
+  padding: "0.5rem 1rem";
+  border-radius: "5px";
+  border: "none";
+  font-weight: "bold";
+}
