--- a/src/Styles/Global.module.css
+++ b/src/Styles/Global.module.css
@@ -77,45 +77,78 @@
 
 .popupBackground {
   position: fixed;
+  /* this elements origin should be at the center of the screen */
   top: 0;
-  left: "0";
-  width: "100vw";
-  height: "100vh";
-  background-color: "rgba(0;0;0;0.3)";
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 2500;
 }
 
 .deletePopup {
-  display: "flex";
-  flex-direction: "column";
-  align-items: "center";
-  justify-content: "center";
-  height: "100%";
-  text-align: "center";
-  padding: "0 10px";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+  padding: 0 10px;
 }
 
 .deletePopup p {
-  color: "#b7bbd0";
-  font-size: "1rem";
-  font-weight: "bold";
-  margin-bottom: "2rem";
+  color: #b7bbd0;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
+.deletePopupNoButton,
+.deletePopupYesButton {
+  color: white;
+  border-radius: 5px;
+  border: none;
+  font-weight: bold;
+  transition: all 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.deletePopup button {
+  padding: 0.5rem 1rem;
 }
 
 .deletePopupNoButton {
-  background-color: "#e75c40";
-  color: "white";
-  padding: "0.5rem 1rem";
-  border-radius: "5px";
-  border: "none";
-  font-weight: "bold";
+  background-color: #e75c40;
 }
 
 .deletePopupYesButton {
-  background-color: "#7077a1";
-  color: "white";
-  padding: "0.5rem 1rem";
-  border-radius: "5px";
-  border: "none";
-  font-weight: "bold";
+  background-color: #7077a1;
+}
+
+.deletePopupNoButton:hover,
+.deletePopupYesButton:hover {
+  filter: brightness(1.2);
+}
+
+.deletePopupNoButton:active,
+.deletePopupYesButton:active {
+  filter: brightness(0.8);
+}
+
+.deleteItemConfirmLabel {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  color: #fff;
+  padding: 4px 3px;
+  font-size: 0.8rem;
+  margin: 3px 0;
+  transition: all 0.3s;
 }
