--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -115,7 +115,7 @@
   top: 60px;
   background-color: #424769;
   width: 12%;
-  height: 150px;
+  height: min-content;
   z-index: 1000;
   border-bottom-left-radius: 10px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
@@ -128,6 +128,84 @@
   gap: 5px;
   transition: all 0.2s;
   overflow: hidden;
+}
+
+.userInfo {
+  height: 30px;
+  width: 100%;
+  padding-left: 2rem;
+  display: flex;
+  text-align: start;
+  align-items: center;
+  gap: 0.5rem;
+  color: white;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #7077a1;
+  margin-bottom: 5px;
+}
+
+/* SETTINGs */
+.dropdownPage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+
+.dropdownSection {
+  display: flex;
+  width: 100%;
+  gap: 10px;
+  padding: 10px 0;
+  margin: 10px 0px;
+  border-bottom: 1px solid #7077a1;
+}
+
+.dropdownSectionVertical {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 0;
+  margin: 5px 0px;
+  border-bottom: 1px solid #7077a1;
+}
+
+.dropdownSection span,
+.dropdownSectionVertical span {
+  color: white;
+  font-weight: bold;
+}
+
+.dottedRangeInput {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.counterButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+}
+
+.dotButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 23px;
+  height: 23px;
+  border: none;
+  border-radius: 50%;
+  background-color: #7077a1;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 /* Content Area - Includes Sidebars */
