--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -152,6 +152,7 @@
   align-items: center;
   justify-content: center;
   padding-bottom: 10px;
+  user-select: none;
 }
 
 .dropdownSection {
@@ -236,13 +237,17 @@
 .contentGrid {
   position: relative;
   margin-left: 1.5rem;
+  margin-right: 1.5rem;
   margin-bottom: 110vh;
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
   row-gap: 2rem;
-  align-items: start;
+  column-gap: 1rem;
+  align-content: start;
+  justify-items: center;
   height: 100%;
   overflow-y: auto;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
 }
 
 .onThisPageSection {
@@ -396,9 +401,86 @@
 
 /* Containers */
 
+.containerCard {
+  width: 100%;
+  height: 400px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+.componentContainer {
+  width: 95%;
+  margin-top: 10px;
+  height: 300px;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+
+.componentTitle {
+  width: 100%;
+  height: 24px;
+  color: #6a7097;
+  text-align: start;
+  display: flex;
+  padding: 10px 0;
+  align-items: center;
+  padding-left: 20px;
+}
+
+.componentOptions {
+  display: flex;
+  gap: 10px;
+}
+
+.componentOptions .componentButton,
+.componentButtonContainer {
+  background-color: #424769;
+  padding: 3px 6px;
+  border: none;
+  border-radius: 5px;
+  color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.componentButtonContainer {
+  margin: 0;
+}
+
+.componentOptions .componentButton:hover {
+  background-color: #2e3249;
+}
+
+.componentOptions .componentButton:active {
+  background-color: #6a7097;
+}
+
+.componentZoomInput {
+  display: flex;
+  width: 24px;
+  align-items: center;
+  background-color: #424769;
+  color: #acb1d1;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+}
+
+.componentCodeContainer {
+}
+
 .reactContainer {
-  width: 300px;
-  height: 500px;
+  width: 100%;
+  height: 400px;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   display: flex;
