--- a/src/Styles/Global.module.css
+++ b/src/Styles/Global.module.css
@@ -67,12 +67,12 @@
 .popup {
   position: fixed;
   top: 150px;
-  left: calc(50vw - 150px);
+  left: 50%;
+  transform: translateX(-50%);
   width: 300px;
   height: 200px;
   background-color: #424769;
   border: 2px solid #6a7097;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -83,7 +83,6 @@
 
 .popupBackground {
   position: fixed;
-  /* this elements origin should be at the center of the screen */
   top: 0;
   left: 0;
   width: 100vw;
