--- a/src/Styles/Home.module.css
+++ b/src/Styles/Home.module.css
@@ -361,7 +361,7 @@
   position: sticky;
   padding-top: 20px;
   width: 18rem;
-  transform: translate(-16 5%, -30%);
+  transform: translate(-16.5%, -30%);
   top: 0;
   left: 0;
   background-color: rgba(45, 50, 80, 0.418);
@@ -394,6 +394,10 @@
   user-select: text;
   display: flex;
   justify-content: space-between;
+}
+
+.listItem input {
+  width: 100%;
 }
 
 .listItem:hover {
@@ -581,11 +585,11 @@
 
 .reactContainer {
   width: 100%;
-  height: 400px;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: var(--size-border-radius);
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
 }
 
 /* CODE EDITOR */
@@ -604,7 +608,8 @@
 .codeEditor .componentTitle {
   position: absolute;
   bottom: -5px;
-  right: -85%;
+  right: -60%;
+  width: 100%;
 }
 
 .codeEditor > div > div {
@@ -633,8 +638,9 @@
   color: var(--color-lightest);
   display: grid;
   height: 100px;
+  width: 100%;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 9fr;
+  grid-template-rows: 1fr 15fr;
 }
 
 .componentStateEditor h3 {
@@ -642,6 +648,57 @@
   font-weight: bold;
   font-size: 16px;
   margin: 10px;
+  grid-column: 1/-1;
+  grid-row: 1;
+}
+
+.componentProperties {
+  display: flex;
+  height: 100%;
+  gap: 10px;
+  padding: 10px;
+  grid-column: 1/-1;
+  grid-row: 2;
+  display: flex;
+  justify-content: center;
+  text-align: start;
+}
+
+.propsSection {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
+}
+
+.stateSection {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.propsSection span,
+.stateSection span {
+  font-weight: bold;
+  color: var(--color-tertiary);
+}
+
+.propsSection label,
+.stateSection label {
+  color: var(--color-lightest);
+  font-size: 12px;
+}
+
+.propsSection input,
+.stateSection input {
+  background-color: var(--color-bg-darker);
+  color: var(--color-lightest);
+  border: none;
+  width: 80px;
+  border-bottom: 1px solid var(--color-primary);
+  padding: 5px;
+  outline: none;
 }
 
 /* Responsive Design */
